--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
         <a href="./about.html">About</a>
     </div>
 
+
+    <p class="quote" id="game">
+        <a href="#" class="link">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit.<br>
+         Ea dignissimos cum iure est ullam eum animi!
+    </p>
+
+
    <!--parte final de la pagina-->  
     <footer>
         Todos los derechos reservados
